--- a/web/package.json
+++ b/web/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@bfk/web",
-  "description": "The most complete dev stack for React/Flux universal web apps.",
-  "author": "Daniel Steigerwald",
+  "name": "brainfock-app-web",
+  "description": "Brainfock web server and client.",
+  "author": "Sergii Gamaiunov <hello@webkadabra.com>",
+  "version": "0.17.0",
   "contributors": [
-    "Mike Grabowski <grabbou@gmail.com>"
   ],
-  "main":"src/server/main",
+  "main": "src/server/main",
   "private": true,
   "scripts": {
     "build": "NODE_ENV=production gulp build",
@@ -18,7 +18,6 @@
     "node": "^4.0.0",
     "npm": "^3.0.0"
   },
-  "version": "1.0.0-rc1",
   "dependencies": {
     "@este/common": "1.0.0-rc1",
     "autoprefixer": "^6.0.2",
@@ -35,6 +34,7 @@
     "chai-immutable": "^1.3.0",
     "classnames": "^2.1.3",
     "compression": "^1.5.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.0",
     "cors": "^2.7.1",
     "cortexjs": "^2.0.2",
@@ -46,6 +46,7 @@
     "eventemitter3": "^1.0.1",
     "express": "^4.11.2",
     "express-device": "^0.4.1",
+    "express-session": "^1.11.3",
     "extract-text-webpack-plugin": "^0.8.0",
     "file-loader": "^0.8.1",
     "glob": "^5.0.13",
@@ -80,12 +81,14 @@
     "normalize.css": "^3.0.2",
     "nyan-progress-webpack-plugin": "^1.0.0",
     "postcss-loader": "^0.6.0",
+    "promisingagent": "^4.2.0",
     "react": "^0.14.0-rc1",
     "react-document-title": "^2.0.0",
     "react-dom": "^0.14.0-rc1",
     "react-intl": "^2.0.0-pr-1",
     "react-pure-render": "^1.0.1",
     "react-redux": "^2.1.2",
+    "react-resolver": "^2.0.5",
     "react-router": "^1.0.0-rc1",
     "react-textarea-autosize": "^2.3.1",
     "react-transform-catch-errors": "^0.2.0",
