establish socket connection (client) + material-ui

--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,7 @@
   "description": "Brainfock web server and client.",
   "author": "Sergii Gamaiunov <hello@webkadabra.com>",
   "version": "0.17.0",
-  "contributors": [
-  ],
+  "contributors": [],
   "main": "src/server/main",
   "private": true,
   "scripts": {
@@ -20,6 +19,7 @@
   },
   "dependencies": {
     "@este/common": "1.0.0-rc1",
+    "and": "0.0.0",
     "autoprefixer": "^6.0.2",
     "babel": "^5.0.8",
     "babel-core": "^5.0.8",
@@ -83,6 +83,16 @@
     "postcss-loader": "^0.6.0",
     "promisingagent": "^4.2.0",
     "react": "^0.14.0-rc1",
+    "react-addons-clone-with-props": "^0.14.0-rc1",
+    "react-addons-create-fragment": "^0.14.0-rc1",
+    "react-addons-css-transition-group": "^0.14.0-rc1",
+    "react-addons-linked-state-mixin": "^0.14.0-rc1",
+    "react-addons-perf": "^0.14.0-rc1",
+    "react-addons-pure-render-mixin": "^0.14.0-rc1",
+    "react-addons-shallow-compare": "^0.14.0-rc1",
+    "react-addons-test-utils": "^0.14.0-rc1",
+    "react-addons-transition-group": "^0.14.0-rc1",
+    "react-addons-update": "^0.14.0-rc1",
     "react-document-title": "^2.0.0",
     "react-dom": "^0.14.0-rc1",
     "react-intl": "^2.0.0-pr-1",
@@ -99,6 +109,8 @@
     "run-sequence": "^1.0.2",
     "sass-loader": "^2.0.0",
     "serve-favicon": "^2.2.0",
+    "socket.io": "^1.3.7",
+    "socket.io-client": "^1.3.7",
     "style-loader": "^0.12.0",
     "stylus-loader": "^1.0.0",
     "url-loader": "^0.5.5",
