--- a/web/package.json
+++ b/web/package.json
@@ -73,7 +73,7 @@
     "loopback-datasource-juggler": "^2.40.1",
     "loopback-webpack-plugin": "^0.1.2",
     "marked": "^0.3.5",
-    "material-ui": "^0.11.1",
+    "material-ui": "^0.12.0",
     "mocha": "^2.2.5",
     "mysql": "^2.9.0",
     "nconf": "^0.7.1",
@@ -93,6 +93,7 @@
     "react-addons-test-utils": "^0.14.0-rc1",
     "react-addons-transition-group": "^0.14.0-rc1",
     "react-addons-update": "^0.14.0-rc1",
+    "react-bootstrap": "^0.25.2",
     "react-document-title": "^2.0.0",
     "react-dom": "^0.14.0-rc1",
     "react-intl": "^2.0.0-pr-1",
