--- a/web/src/server/model-config.json
+++ b/web/src/server/model-config.json
@@ -60,6 +60,10 @@
     "dataSource": "db",
     "public": true
   },
+  "TopicTypeScheme": {
+    "dataSource": "db",
+    "public": true
+  },
   "SettingsField": {
     "dataSource": "db",
     "public": true
