--- a/web/src/server/config.json
+++ b/web/src/server/config.json
@@ -2,6 +2,7 @@
   "restApiRoot": "/api",
   "host": "127.0.0.1",
   "port": 3000,
+  "publicHost": 3000,
   "parse": {
     "body-parser#json": {},
     "body-parser#urlencoded": {"params": { "extended": true }}
