--- a/web/package.json
+++ b/web/package.json
@@ -49,6 +49,7 @@
     "express-session": "^1.11.3",
     "extract-text-webpack-plugin": "^0.8.0",
     "file-loader": "^0.8.1",
+    "font-awesome": "^4.4.0",
     "glob": "^5.0.13",
     "gulp": "^3.9.0",
     "gulp-bg": "0.0.7",
