Tidy code format (newlines etc.) after `slc arc` command

--- a/web/src/server/config.json
+++ b/web/src/server/config.json
@@ -6,7 +6,11 @@
   "googleAnalyticsId": "UA-XXXXXXX-X",
   "parse": {
     "body-parser#json": {},
-    "body-parser#urlencoded": {"params": { "extended": true }}
+    "body-parser#urlencoded": {
+      "params": {
+        "extended": true
+      }
+    }
   },
   "remoting": {
     "context": {
