Add `Field` model

--- a/web/src/server/model-config.json
+++ b/web/src/server/model-config.json
@@ -103,5 +103,9 @@
   "ScreenField": {
     "dataSource": "db",
     "public": true
+  },
+  "Field": {
+    "dataSource": "db",
+    "public": false
   }
 }
