--- a/web/src/server/config.json
+++ b/web/src/server/config.json
@@ -3,6 +3,7 @@
   "host": "127.0.0.1",
   "port": 3000,
   "baseUrl": "localhost:3000",
+  "googleAnalyticsId": "UA-XXXXXXX-X",
   "parse": {
     "body-parser#json": {},
     "body-parser#urlencoded": {"params": { "extended": true }}
