--- a/web/src/server/model-config.json
+++ b/web/src/server/model-config.json
@@ -107,5 +107,9 @@
   "Field": {
     "dataSource": "db",
     "public": false
+  },
+  "Workspace": {
+    "dataSource": "db",
+    "public": true
   }
 }
