--- a/web/package.json
+++ b/web/package.json
@@ -84,7 +84,7 @@
     "postcss-loader": "^0.6.0",
     "promisingagent": "^4.2.0",
     "react": "^0.14.0-rc1",
-    "react-addons-clone-with-props": "^0.14.0-rc1",
+    "react-addons-clone-with-props": "^0.14.0",
     "react-addons-create-fragment": "^0.14.0-rc1",
     "react-addons-css-transition-group": "^0.14.0-rc1",
     "react-addons-linked-state-mixin": "^0.14.0-rc1",
