Add `TopicGroupSchemeTypeScheme` map model that connects group schemes with type schemes

--- a/web/src/server/model-config.json
+++ b/web/src/server/model-config.json
@@ -68,6 +68,14 @@
     "dataSource": "db",
     "public": false
   },
+  "TopicGroupScheme": {
+    "dataSource": "db",
+    "public": false
+  },
+  "TopicGroupSchemeTypeScheme": {
+    "dataSource": "db",
+    "public": false
+  },
   "SettingsField": {
     "dataSource": "db",
     "public": true
