--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,7 @@
   "name": "brainfock-app-web",
   "description": "Brainfock web server and client.",
   "author": "Sergii Gamaiunov <hello@webkadabra.com>",
-  "version": "0.19.0",
+  "version": "0.20.1-dev",
   "contributors": [],
   "main": "src/server/main",
   "private": true,
@@ -102,7 +102,7 @@
     "react-redux": "^2.1.2",
     "react-resolver": "^2.0.5",
     "react-router": "^1.0.0-rc1",
-    "react-select": "^0.6.12",
+    "react-select": "^0.7.0",
     "react-textarea-autosize": "^2.3.1",
     "react-transform-catch-errors": "^0.2.0",
     "react-transform-hmr": "^0.1.6",
