Update `material-io` version and theme setup

--- a/web/package.json
+++ b/web/package.json
@@ -74,7 +74,7 @@
     "loopback-datasource-juggler": "^2.40.1",
     "loopback-webpack-plugin": "^0.1.2",
     "marked": "^0.3.5",
-    "material-ui": "^0.12.0",
+    "material-ui": "^0.12.3",
     "mocha": "^2.2.5",
     "mysql": "^2.9.0",
     "nconf": "^0.7.1",
@@ -103,6 +103,7 @@
     "react-resolver": "^2.0.5",
     "react-router": "^1.0.0-rc1",
     "react-select": "^0.7.0",
+    "react-tap-event-plugin": "^0.2.1",
     "react-textarea-autosize": "^2.3.1",
     "react-transform-catch-errors": "^0.2.0",
     "react-transform-hmr": "^0.1.6",
