Add `runOperation` remote method & helper to `Topic`
This allows to apply workflow operation on a topic, saving operaiton
history and updating Topic

--- a/web/src/server/model-config.json
+++ b/web/src/server/model-config.json
@@ -143,5 +143,9 @@
   "WorkflowStageOperationMap": {
     "dataSource": "db",
     "public": false
+  },
+  "EntityWorkflowOperation": {
+    "dataSource": "db",
+    "public": false
   }
 }
