--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,7 @@
   "name": "brainfock-app-web",
   "description": "Brainfock web server and client.",
   "author": "Sergii Gamaiunov <hello@webkadabra.com>",
-  "version": "0.20.1-dev",
+  "version": "0.20.0",
   "contributors": [],
   "main": "src/server/main",
   "private": true,
