--- a/.eslintrc
+++ b/.eslintrc
@@ -60,7 +60,7 @@
     "no-spaced-func": 2,
     "no-sparse-arrays": 2,
     "no-throw-literal": 2,
-    "no-trailing-spaces": 2,
+    "no-trailing-spaces": [2, { "skipBlankLines": true }],
     "no-undef": 2,
     "no-undef-init": 2,
     "no-undefined": 0,
