Add `RawTopic` model accessing `topic` db table
This is needed to be able to delete topic via API since you can't delete from topic view table

--- a/web/src/server/model-config.json
+++ b/web/src/server/model-config.json
@@ -52,6 +52,10 @@
     "dataSource": "db",
     "public": true
   },
+  "RawTopic": {
+    "dataSource": "db",
+    "public": true
+  },
   "TopicGroup": {
     "dataSource": "db",
     "public": true
