--- a/web/src/server/config.json
+++ b/web/src/server/config.json
@@ -2,7 +2,7 @@
   "restApiRoot": "/api",
   "host": "127.0.0.1",
   "port": 3000,
-  "baseUrl": "localhost:3000",
+  "baseUrl": "http://localhost:3000/",
   "googleAnalyticsId": "UA-XXXXXXX-X",
   "parse": {
     "body-parser#json": {},
