--- a/web/package.json
+++ b/web/package.json
@@ -18,11 +18,11 @@
     "npm": "^3.0.0"
   },
   "dependencies": {
-    "@este/common": "1.0.0-rc1",
     "and": "0.0.0",
     "autoprefixer": "^6.0.2",
     "babel": "^5.0.8",
     "babel-core": "^5.0.8",
+    "babel-eslint": "^4.1.2",
     "babel-loader": "^5.0.0",
     "babel-plugin-react-transform": "^1.0.5",
     "backbone": "^1.2.3",
@@ -42,7 +42,8 @@
     "css-loader": "^0.18.0",
     "del": "^2.0.2",
     "errorhandler": "^1.4.2",
-    "eslint-plugin-react": "^3.0.0",
+    "eslint": "^1.4.1",
+    "eslint-plugin-react": "^3.3.2",
     "eventemitter3": "^1.0.1",
     "express": "^4.11.2",
     "express-device": "^0.4.1",
@@ -99,7 +100,7 @@
     "react-dom": "^0.14.0-rc1",
     "react-intl": "^2.0.0-pr-1",
     "react-pure-render": "^1.0.1",
-    "react-redux": "^2.1.2",
+    "react-redux": "^3.0.1",
     "react-resolver": "^2.0.5",
     "react-router": "^1.0.0-rc1",
     "react-select": "^0.7.0",
@@ -108,10 +109,15 @@
     "react-transform-catch-errors": "^0.2.0",
     "react-transform-hmr": "^0.1.6",
     "redbox-react": "^1.0.5",
+    "redux": "^3.0.0",
     "redux-devtools": "^2.1.2",
+    "redux-logger": "^2.0.1",
+    "redux-promise-middleware": "^1.0.0",
+    "redux-storage": "^1.3.1",
     "reselect": "^1.0.0",
     "run-sequence": "^1.0.2",
     "sass-loader": "^2.0.0",
+    "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.2.0",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
