Add `member` model (useful for admin section)

--- a/src/server/model-config.json
+++ b/src/server/model-config.json
@@ -16,6 +16,10 @@
   "User": {
     "dataSource": "db"
   },
+  "Member": {
+    "dataSource": "db",
+    "public": true
+  },
   "AccessToken": {
     "dataSource": "db",
     "public": false
