--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-bootstrap": "^0.25.100-react-pre.1",
     "react-document-title": "^2.0.0",
     "react-dom": "^0.14.0-rc1",
+    "react-hotkeys": "^0.6.0",
     "react-intl": "^2.0.0-pr-1",
     "react-pure-render": "^1.0.1",
     "react-redux": "^3.0.1",
