Add reserved workspace namespaces config & validation

--- a/src/server/config.json
+++ b/src/server/config.json
@@ -33,5 +33,12 @@
       "disableStackTrace": false
     }
   },
-  "legacyExplorer": false
+  "legacyExplorer": false,
+  "bfk": {
+    "reservedNamespace": [
+      "admin",
+      "workspace",
+      "auth"
+    ]
+  }
 }
