Add names of all root modules to list of reserved namespaces

--- a/src/server/config.json
+++ b/src/server/config.json
@@ -37,8 +37,12 @@
   "bfk": {
     "reservedNamespace": [
       "admin",
-      "workspace",
-      "auth"
+      "auth",
+      "boards",
+      "create",
+      "projects",
+      "wiki",
+      "workspaces"
     ]
   }
 }
