--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "redbox-react": "^1.0.5",
     "redux": "^3.0.0",
     "redux-devtools": "^2.1.2",
+    "redux-form": "^3.0.0-beta-3",
     "redux-logger": "^2.0.1",
     "redux-promise-middleware": "^1.0.0",
     "redux-storage": "^1.3.1",
