Hotfix: case-sensitive dirname

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "brainfock-app-web",
   "description": "Brainfock business management & CMS software.",
   "author": "Sergii Gamaiunov <hello@webkadabra.com>",
-  "version": "0.22.0",
+  "version": "0.22.1",
   "contributors": [],
   "main": "src/server/main",
   "private": true,
@@ -105,6 +105,7 @@
     "react-redux": "^3.0.1",
     "react-resolver": "^2.0.5",
     "react-router": "^1.0.0-rc1",
+    "react-router-proxy-loader": "^0.4.0",
     "react-select": "^0.7.0",
     "react-tap-event-plugin": "^0.2.1",
     "react-textarea-autosize": "^2.3.1",
