--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "brainfock-app-web",
+  "name": "Brainfock App",
   "description": "Brainfock business management & CMS software.",
   "author": "Sergii Gamaiunov <hello@webkadabra.com>",
-  "version": "0.22.3",
+  "version": "0.23.0",
   "contributors": [],
   "main": "src/server/main",
   "private": true,
