--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "gulp": "^3.9.0",
     "gulp-bg": "0.0.7",
     "gulp-eslint": "^1.0.0",
-    "gulp-util": "^3.0.2",
+    "gulp-mocha": "^2.1.3",
+    "gulp-shell": "^0.5.0",
+    "gulp-util": "^3.0.7",
     "hash-file": "^2.1.0",
     "history": "^1.9.0",
     "immutable": "^3.6.4",
@@ -68,6 +70,7 @@
     "invariant": "^2.1.0",
     "isomorphic-fetch": "^2.1.1",
     "jquery": "^2.1.4",
+    "jsdom": "^7.0.2",
     "less": "^2.5.1",
     "less-loader": "^2.0.0",
     "loopback": "^2.22.2",
@@ -85,7 +88,7 @@
     "nyan-progress-webpack-plugin": "^1.0.0",
     "postcss-loader": "^0.7.0",
     "promisingagent": "^4.2.0",
-    "react": "^0.14.0-rc1",
+    "react": "^0.14.1",
     "react-addons-clone-with-props": "^0.14.0",
     "react-addons-create-fragment": "^0.14.0-rc1",
     "react-addons-css-transition-group": "^0.14.0-rc1",
@@ -93,7 +96,7 @@
     "react-addons-perf": "^0.14.0-rc1",
     "react-addons-pure-render-mixin": "^0.14.0-rc1",
     "react-addons-shallow-compare": "^0.14.0-rc1",
-    "react-addons-test-utils": "^0.14.0-rc1",
+    "react-addons-test-utils": "^0.14.1",
     "react-addons-transition-group": "^0.14.0-rc1",
     "react-addons-update": "^0.14.0-rc1",
     "react-bootstrap": "^0.25.100-react-pre.1",
@@ -123,6 +126,8 @@
     "sass-loader": "^2.0.0",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.2.0",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
     "style-loader": "^0.13.0",
