--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "body-parser": "^1.14.0",
     "bootstrap": "^3.3.5",
     "chai": "^3.3.0",
-    "chai-immutable": "^1.3.0",
+    "chai-immutable": "^1.5.1",
     "classnames": "^2.1.3",
     "compression": "^1.5.2",
     "connect-flash": "^0.1.1",
@@ -79,7 +79,7 @@
     "loopback-datasource-juggler": "^2.40.1",
     "loopback-webpack-plugin": "^0.1.2",
     "marked": "^0.3.5",
-    "material-ui": "^0.13.*",
+    "material-ui": "^0.13.1",
     "mocha": "^2.2.5",
     "mysql": "^2.9.0",
     "nconf": "^0.7.1",
