--- a/package.json
+++ b/package.json
@@ -23,30 +23,22 @@
     "autoprefixer": "^6.0.2",
     "babel": "^5.0.8",
     "babel-core": "^5.0.8",
-    "babel-eslint": "^4.1.2",
     "babel-loader": "^5.0.0",
     "babel-plugin-react-transform": "^1.0.5",
-    "backbone": "^1.2.3",
     "bcrypt": "^0.8.5",
     "bluebird": "^2.10.0",
     "body-parser": "^1.14.0",
     "bootstrap": "^3.3.5",
-    "chai": "^3.3.0",
-    "chai-immutable": "^1.5.1",
     "classnames": "^2.1.3",
     "compression": "^1.5.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.0",
     "cors": "^2.7.1",
-    "cortexjs": "^2.0.2",
     "crypto": "0.0.3",
     "css-loader": "^0.21.0",
     "del": "^2.0.2",
     "errorhandler": "^1.4.2",
-    "eslint": "^1.4.1",
-    "eslint-plugin-react": "^3.3.2",
     "eventemitter3": "^1.0.1",
-    "express": "^4.11.2",
     "express-device": "^0.4.1",
     "express-session": "^1.11.3",
     "extract-text-webpack-plugin": "^0.8.0",
@@ -67,10 +59,7 @@
     "intl-locales-supported": "^1.0.0",
     "intl-messageformat": "^1.1.0",
     "intl-relativeformat": "^1.1.0",
-    "invariant": "^2.1.0",
     "isomorphic-fetch": "^2.1.1",
-    "jquery": "^2.1.4",
-    "jsdom": "^7.0.2",
     "less": "^2.5.1",
     "less-loader": "^2.0.0",
     "loopback": "^2.22.2",
@@ -79,15 +68,12 @@
     "loopback-datasource-juggler": "^2.40.1",
     "loopback-webpack-plugin": "^0.1.2",
     "marked": "^0.3.5",
-    "material-ui": "^0.13.1",
-    "mocha": "^2.2.5",
+    "material-ui": "^0.13.0",
     "mysql": "^2.9.0",
     "nconf": "^0.7.1",
     "node-sass": "^3.1.2",
     "normalize.css": "^3.0.2",
-    "nyan-progress-webpack-plugin": "^1.0.0",
     "postcss-loader": "^0.7.0",
-    "promisingagent": "^4.2.0",
     "react": "^0.14.1",
     "react-addons-clone-with-props": "^0.14.0",
     "react-addons-create-fragment": "^0.14.0-rc1",
@@ -106,7 +92,6 @@
     "react-intl": "^2.0.0-pr-1",
     "react-pure-render": "^1.0.1",
     "react-redux": "^3.0.1",
-    "react-resolver": "^2.0.5",
     "react-router": "^1.0.0-rc1",
     "react-router-proxy-loader": "^0.4.0",
     "react-select": "^0.7.0",
@@ -116,18 +101,14 @@
     "react-transform-hmr": "^0.1.6",
     "redbox-react": "^1.0.5",
     "redux": "^3.0.0",
-    "redux-devtools": "^2.1.2",
     "redux-form": "^3.0.0-beta-3",
     "redux-logger": "^2.0.1",
     "redux-promise-middleware": "^1.0.0",
     "redux-storage": "^1.3.1",
-    "reselect": "^1.0.0",
     "run-sequence": "^1.0.2",
     "sass-loader": "^2.0.0",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.2.0",
-    "sinon": "^1.17.2",
-    "sinon-chai": "^2.8.0",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
     "style-loader": "^0.13.0",
@@ -136,8 +117,6 @@
     "useragent": "^2.1.7",
     "validator": "^4.0.6",
     "webpack": "^1.9.5",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.1.0",
     "yargs": "^3.3.1"
   },
   "disabledDependencies": {
@@ -151,7 +130,19 @@
     "karma-webpack": "^1.7.0"
   },
   "devDependencies": {
+    "babel-eslint": "^4.1.2",
+    "chai": "^3.3.0",
+    "chai-immutable": "^1.5.1",
+    "eslint": "^1.4.1",
+    "eslint-plugin-react": "^3.3.2",
+    "jsdom": "^7.0.2",
+    "mocha": "^2.2.5",
     "nodemon": "^1.7.0",
-    "webpack-dev-server": "^1.11.0"
+    "nyan-progress-webpack-plugin": "^1.0.0",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-dev-server": "^1.11.0",
+    "webpack-hot-middleware": "^2.1.0"
   }
 }
