--- a/package.json
+++ b/package.json
@@ -109,6 +109,9 @@
     "sass-loader": "^2.0.0",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.2.0",
+    "sinon": "^1.17.2",
+    "sinon-as-promised": "^4.0.0",
+    "sinon-chai": "^2.8.0",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
     "style-loader": "^0.13.0",
