Add API endpoint for `TopicGroupScheme`
Currently it will be only available to Admin via `ACL` model

--- a/src/server/model-config.json
+++ b/src/server/model-config.json
@@ -78,7 +78,7 @@
   },
   "TopicGroupScheme": {
     "dataSource": "db",
-    "public": false
+    "public": true
   },
   "TopicGroupSchemeTypeScheme": {
     "dataSource": "db",
