Add `EntityMenu` & `EntityMenuItem` models to app model-config.json

--- a/src/server/model-config.json
+++ b/src/server/model-config.json
@@ -155,5 +155,15 @@
   "EntityWorkflowOperation": {
     "dataSource": "db",
     "public": false
+  },
+  "EntityMenu": {
+    "dataSource": "db",
+    "public": true
+  },
+  "EntityMenuItem": {
+    "dataSource": "db",
+    "public": true,
+    "$promise": {},
+    "$resolved": true
   }
 }
