Add `login` and `signup` to reserverdNamespaces config

--- a/src/server/config.json
+++ b/src/server/config.json
@@ -38,6 +38,8 @@
     "reservedNamespace": [
       "admin",
       "auth",
+      "login",
+      "signup",
       "boards",
       "create",
       "projects",
