--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "loopback-datasource-juggler": "^2.40.1",
     "loopback-webpack-plugin": "^0.1.2",
     "marked": "^0.3.5",
-    "material-ui": "0.13.0",
+    "material-ui": "^0.13.4",
     "mysql": "^2.9.0",
     "nconf": "^0.7.1",
     "node-sass": "^3.1.2",
