Add `TopicMenuItem` model to app datasource

--- a/src/server/model-config.json
+++ b/src/server/model-config.json
@@ -92,6 +92,10 @@
     "dataSource": "db",
     "public": false
   },
+  "TopicMenuItem": {
+    "dataSource": "db",
+    "public": false
+  },
   "SettingsField": {
     "dataSource": "db",
     "public": true
