Add indication of and alpha release and make package available via NPM

--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "Brainfock",
   "description": "Brainfock business management & CMS software.",
   "author": "Sergii Gamaiunov <hello@webkadabra.com>",
-  "version": "0.26.0",
+  "version": "0.26.0-alpha.1",
   "contributors": [],
   "main": "src/server/main",
-  "private": true,
   "scripts": {
     "postinstall": "gulp build --production",
     "build": "NODE_ENV=production gulp build",
