Fix package name for NPM

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Brainfock",
+  "name": "brainfock",
   "description": "Brainfock business management & CMS software.",
   "author": "Sergii Gamaiunov <hello@webkadabra.com>",
   "version": "0.26.0-alpha.1",
