--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "mysql": "^2.9.0",
     "nconf": "^0.7.1",
     "node-sass": "^3.1.2",
+    "nyan-progress-webpack-plugin": "^1.1.3",
     "normalize.css": "^3.0.2",
     "postcss-loader": "^0.7.0",
     "react": "^0.14.1",
@@ -118,7 +119,19 @@
     "url-loader": "^0.5.5",
     "useragent": "^2.1.7",
     "validator": "^4.0.6",
-    "yargs": "^3.3.1"
+    "yargs": "^3.3.1",
+    "babel-eslint": "^4.1.2",
+    "chai": "^3.3.0",
+    "chai-immutable": "^1.5.1",
+    "eslint": "^1.4.1",
+    "eslint-plugin-react": "^3.3.2",
+    "jsdom": "^7.0.2",
+    "mocha": "^2.2.5",
+    "nodemon": "^1.7.0",
+    "webpack": "^1.12.3",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-dev-server": "^1.12.1",
+    "webpack-hot-middleware": "^2.4.1"
   },
   "disabledDependencies": {
     "karma": "^0.13.3",
@@ -129,22 +142,5 @@
     "karma-notify-reporter": "^0.1.1",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0"
-  },
-  "devDependencies": {
-    "babel-eslint": "^4.1.2",
-    "chai": "^3.3.0",
-    "chai-immutable": "^1.5.1",
-    "eslint": "^1.4.1",
-    "eslint-plugin-react": "^3.3.2",
-    "jsdom": "^7.0.2",
-    "mocha": "^2.2.5",
-    "nodemon": "^1.7.0",
-    "nyan-progress-webpack-plugin": "^1.1.3",
-    "sinon": "^1.17.2",
-    "sinon-chai": "^2.8.0",
-    "webpack": "^1.12.3",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-dev-server": "^1.12.1",
-    "webpack-hot-middleware": "^2.4.1"
   }
 }
