--- a/.eslintrc
+++ b/.eslintrc
@@ -107,7 +107,7 @@
     "react/jsx-boolean-value": 2,
     "react/jsx-no-undef": 2,
     "react/jsx-sort-props": 2,
-    "react/jsx-sort-prop-types": 2,
+    "react/sort-prop-types": 2,
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
     "react/no-did-mount-set-state": 2,
