--- a/.babelrc
+++ b/.babelrc
@@ -1,34 +1,14 @@
+// This .babelrc is for react-native, webpack server, and gulpfile.babel.js.
+// Browser babel configuration is in ./webpack/makeConfig.js.
+// Server .babelrc is in ./src/server directory.
+// https://github.com/facebook/react-native/tree/master/babel-preset
 {
+  "presets": ["react-native"],
   "env": {
-    "development": {
-      "plugins": [
-        "react-transform"
-      ],
-      "extra": {
-        "react-transform": {
-          "transforms": [{
-            "transform": "react-transform-hmr",
-            "imports": ["react"],
-            "locals": ["module"]
-          }, {
-            "transform": "react-transform-catch-errors",
-            "imports": ["react", "redbox-react"]
-          }]
-        }
-      }
-    },
     "production": {
-      "optional": [
-        "optimisation.react.constantElements",
-        "optimisation.react.inlineElements"
+      "plugins": [
+        "transform-react-constant-elements"
       ]
     }
-  },
-  "stage": 2,
-  "optional": [
-    "es7.classProperties",
-    "es7.decorators",
-    "es7.objectRestSpread",
-    "es7.functionBind"
-  ]
+  }
 }
