--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "description": "Brainfock business management & CMS software.",
   "author": "Sergii Gamaiunov <hello@webkadabra.com>",
   "version": "0.28.1",
-  "license" : "SEE LICENSE IN LICENSE.md",
+  "license": "SEE LICENSE IN LICENSE.md",
   "bugs": {
     "url": "https://github.com/Brainfock/Brainfock/issues"
   },
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/Brainfock/Brainfock"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Brainfock/Brainfock"
   },
   "keywords": [
     "react",
@@ -36,15 +36,139 @@
     "npm": "^3.0.0"
   },
   "dependencies": {
+    "autoprefixer": "^6.1.0",
+    "babel-core": "^6.6.0",
+    "babel-eslint": "^7.0.0",
+    "babel-jest": "^18.0.0",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-react-intl": "^2.1.1",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-react-constant-elements": "^6.3.13",
+    "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015-node6": "^0.4.0",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-react-native": "^1.9.0",
+    "babel-preset-stage-1": "^6.3.13",
+    "babel-register": "^6.3.13",
+    "babel-runtime": "^6.3.19",
+    "bluebird": "^3.0.5",
+    "color": "^1.0.3",
+    "compression": "^1.4.0",
+    "copy-webpack-plugin": "^4.0.0",
+    "css-loader": "^0.26.0",
+    "del": "^2.1.0",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-loader": "^1.1.1",
+    "eslint-plugin-babel": "^4.0.0",
+    "eslint-plugin-flowtype": "^2.28.2",
+    "eslint-plugin-fp": "^2.2.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.0.0",
+    "eslint-plugin-react-native": "^2.0.0",
+    "express": "^4.14.0",
+    "express-device": "^0.4.2",
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "fela": "^4.1.0",
+    "fela-native": "^4.1.1",
+    "fela-plugin-logger": "^4.1.0",
+    "fela-plugin-placeholder-prefixer": "^4.1.2",
+    "fela-plugin-validator": "^4.1.0",
+    "fela-preset-web": "^4.1.0",
+    "file-loader": "^0.10.0",
+    "flow-bin": "^0.37.0",
+    "gravatar": "^1.6.0",
+    "gulp": "^3.9.0",
+    "gulp-bg": "^0.0.8",
+    "gulp-eslint": "^3.0.1",
+    "gulp-if": "^2.0.0",
+    "gulp-real-favicon": "^0.2.1",
+    "gulp-shell": "^0.5.2",
+    "gulp-util": "^3.0.7",
+    "hash-file": "^3.0.0",
+    "iflow-react-intl": "^1.2.0",
+    "inline-style-prefixer": "^2.0.5",
+    "intl": "^1.0.0",
+    "intl-locales-supported": "^1.0.0",
+    "intl-messageformat": "^1.1.0",
+    "intl-relativeformat": "^1.1.0",
+    "invariant": "^2.1.2",
+    "ip": "^1.0.2",
+    "jest": "^18.1.0",
+    "localforage": "^1.4.3",
+    "loopback": "~2.27.0",
+    "loopback-boot": "~2.12.2",
+    "loopback-connector-mysql": "~2.2.0",
+    "loopback-datasource-juggler": "~2.40.1",
+    "make-error": "^1.0.4",
+    "nconf": "^0.8.1",
+    "nodemon": "^1.8.1",
+    "nyan-progress-webpack-plugin": "^1.1.4",
+    "postcss-loader": "^1.1.0",
+    "ramda": "^0.23.0",
+    "raven-js": "^3.0.3",
+    "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-fela": "^4.0.1",
+    "react-helmet": "^4.0.0",
+    "react-intl": "^2.1.2",
+    "react-native": "^0.41.1",
+    "react-native-fbsdk": "^0.5.0",
+    "react-native-i18n": "^1.0.0",
+    "react-native-side-menu": "^0.20.0",
+    "react-native-uuid": "^1.4.8",
+    "react-native-vector-icons": "^4.0.0",
+    "react-redux": "^5.0.1",
+    "react-router": "4.0.0-alpha.6",
+    "redbox-react": "^1.0.5",
+    "redux": "^3.0.4",
+    "redux-logger": "^2.7.4",
+    "redux-observable": "^0.13.0",
+    "redux-persist": "^4.0.1",
+    "regenerator": "^0.9.5",
+    "regenerator-runtime": "^0.10.0",
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.0.2",
+    "rxjs": "^5.0.3",
+    "serialize-javascript": "^1.1.2",
+    "sinon": "^1.17.2",
+    "sinon-as-promised": "^4.0.0",
+    "style-loader": "^0.13.0",
+    "through2": "^2.0.1",
+    "url-loader": "^0.5.5",
+    "uuid": "^3.0.0",
+    "validator": "^6.0.0",
+    "webpack": "^2.2.0",
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-hot-middleware": "^2.15.0",
+    "webpack-isomorphic-tools": "^2.6.5",
+    "yargs": "^6.0.0"
+  },
+  "_dependencies": {
     "and": "0.0.0",
-    "autoprefixer": "~6.0.2",
-    "babel": "~5.0.8",
-    "babel-core": "~5.0.8",
-    "babel-runtime": "~5.0.13",
-    "babel-loader": "~5.0.0",
-    "babel-plugin-react-transform": "~1.0.5",
+    "autoprefixer": "^6.1.0",
+    "babel-core": "^6.6.0",
+    "babel-eslint": "^7.0.0",
+    "babel-jest": "^18.0.0",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-react-intl": "^2.1.1",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-react-constant-elements": "^6.3.13",
+    "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015-node6": "^0.4.0",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-react-native": "^1.9.0",
+    "babel-preset-stage-1": "^6.3.13",
+    "babel-register": "^6.3.13",
+    "babel-runtime": "^6.3.19",
     "bcrypt": "~0.8.5",
-    "bluebird": "~2.10.0",
+    "bluebird": "^3.0.5",
     "body-parser": "~1.14.0",
     "bootstrap": "~3.3.5",
     "classnames": "~2.1.3",
@@ -53,30 +177,30 @@
     "cookie-parser": "~1.4.0",
     "cors": "~2.7.1",
     "crypto": "0.0.3",
-    "css-loader": "~0.21.0",
-    "del": "~2.0.2",
+    "css-loader": "^0.26.0",
+    "del": "^2.1.0",
     "errorhandler": "~1.4.2",
     "eventemitter3": "~1.0.1",
     "express-device": "~0.4.1",
     "express-session": "~1.11.3",
-    "extract-text-webpack-plugin": "~0.9.1",
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "~0.8.1",
     "font-awesome": "~4.4.0",
     "glob": "~5.0.13",
-    "gulp": "~3.9.0",
-    "gulp-bg": "0.0.7",
-    "gulp-eslint": "~1.0.0",
-    "gulp-mocha": "~2.1.3",
-    "gulp-shell": "~0.5.0",
-    "gulp-util": "~3.0.7",
+    "gulp": "^3.9.0",
+    "gulp-bg": "^0.0.8",
+    "gulp-eslint": "^3.0.1",
+    "gulp-if": "^2.0.0",
+    "gulp-real-favicon": "^0.2.1",
+    "gulp-util": "^3.0.7",
     "hash-file": "~2.1.0",
     "history": "~1.9.0",
     "immutable": "~3.6.4",
     "immutablediff": "~0.4.2",
-    "intl": "~1.0.0",
-    "intl-locales-supported": "~1.0.0",
-    "intl-messageformat": "~1.1.0",
-    "intl-relativeformat": "~1.1.0",
+    "intl": "^1.0.0",
+    "intl-locales-supported": "^1.0.0",
+    "intl-messageformat": "^1.1.0",
+    "intl-relativeformat": "^1.1.0",
     "isomorphic-fetch": "~2.1.1",
     "less": "~2.5.1",
     "less-loader": "~2.0.0",
@@ -90,7 +214,6 @@
     "mysql": "~2.9.0",
     "nconf": "~0.7.1",
     "node-sass": "~3.1.2",
-    "nyan-progress-webpack-plugin": "~1.1.3",
     "normalize.css": "~3.0.2",
     "postcss-loader": "~0.7.0",
     "react": "~0.14.1",
@@ -139,11 +262,18 @@
     "useragent": "~2.1.7",
     "validator": "~4.0.6",
     "yargs": "~3.3.1",
-    "babel-eslint": "~4.1.2",
     "chai": "~3.3.0",
     "chai-immutable": "~1.5.1",
-    "eslint": "~1.4.1",
-    "eslint-plugin-react": "~3.3.2",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-loader": "^1.1.1",
+    "eslint-plugin-babel": "^4.0.0",
+    "eslint-plugin-flowtype": "^2.28.2",
+    "eslint-plugin-fp": "^2.2.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.0.0",
+    "eslint-plugin-react-native": "^2.0.0",
     "jsdom": "~7.0.2",
     "mocha": "~2.2.5",
     "nodemon": "~1.7.0",
@@ -161,5 +291,17 @@
     "karma-notify-reporter": "^0.1.1",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0"
+  },
+  "_devDependencies": {
+    "babel-plugin-transform-function-bind": "^6.22.0"
+  },
+  "____devDependencies": {
+    "gulp-mocha": "^3.0.1",
+    "gulp-shell": "^0.5.2",
+    "run-sequence": "^1.0.2"
+  },
+  "devDependencies": {
+    "gulp-mocha": "^3.0.1",
+    "loopback-webpack-plugin": "^0.1.2"
   }
 }
