--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "loopback-connector-mysql": "~2.2.0",
     "loopback-datasource-juggler": "~2.40.1",
     "make-error": "^1.0.4",
+    "material-ui": "^0.17.0",
     "nconf": "^0.8.1",
     "nodemon": "^1.8.1",
     "nyan-progress-webpack-plugin": "^1.1.4",
@@ -111,10 +112,13 @@
     "ramda": "^0.23.0",
     "raven-js": "^3.0.3",
     "react": "^15.4.1",
+    "react-addons-pure-render-mixin": "^15.4.2",
     "react-addons-test-utils": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "react-fela": "^4.0.1",
     "react-helmet": "^4.0.0",
+    "react-hotkeys": "^0.9.0",
     "react-intl": "^2.1.2",
     "react-native": "^0.41.1",
     "react-native-fbsdk": "^0.5.0",
@@ -124,11 +128,14 @@
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.1",
     "react-router": "4.0.0-alpha.6",
+    "react-select": "^1.0.0-rc.3",
     "redbox-react": "^1.0.5",
     "redux": "^3.0.4",
+    "redux-form": "^6.5.0",
     "redux-logger": "^2.7.4",
     "redux-observable": "^0.13.0",
     "redux-persist": "^4.0.1",
+    "redux-promise-middleware": "^4.2.0",
     "regenerator": "^0.9.5",
     "regenerator-runtime": "^0.10.0",
     "require-dir": "^0.3.0",
@@ -137,6 +144,8 @@
     "serialize-javascript": "^1.1.2",
     "sinon": "^1.17.2",
     "sinon-as-promised": "^4.0.0",
+    "socket.io": "~1.3.7",
+    "socket.io-client": "~1.3.7",
     "style-loader": "^0.13.0",
     "through2": "^2.0.1",
     "url-loader": "^0.5.5",
@@ -301,6 +310,8 @@
     "run-sequence": "^1.0.2"
   },
   "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-function-bind": "^6.22.0",
     "gulp-mocha": "^3.0.1",
     "loopback-webpack-plugin": "^0.1.2"
   }
