--- a/src/server/.babelrc
+++ b/src/server/.babelrc
@@ -1,6 +1,8 @@
 {
   "presets": ["es2015-node6/object-rest", "react", "stage-1"],
   "plugins": [
+    "transform-decorators-legacy",
+    "transform-function-bind",
     ["transform-runtime", {
       "helpers": false,
       "polyfill": false,
