--- a/webpack/.babelrc
+++ b/webpack/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["es2015-node6/object-rest"]
+  "presets": ["es2015-node6/object-rest"],
+  "plugins": ["transform-decorators-legacy"]
 }
