--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   "contributors": [],
   "main": "src/server/main",
   "scripts": {
-    "postinstall": "gulp build --production",
-    "build": "NODE_ENV=production gulp build",
+    "postinstall": "./node_modules/gulp/bin/gulp.js build --production",
+    "build": "NODE_ENV=production ./node_modules/gulp/bin/gulp.js build",
     "start": "NODE_ENV=production node src/server",
-    "start-dev": "gulp",
-    "start-dev-server": "set NODE_ENV=development && gulp dev-server",
-    "test": "gulp test"
+    "start-dev": "./node_modules/gulp/bin/gulp.js",
+    "start-dev-server": "set NODE_ENV=development && ./node_modules/gulp/bin/gulp.js dev-server",
+    "test": "./node_modules/gulp/bin/gulp.js test"
   },
   "engines": {
     "node": "^4.0.0",
@@ -290,24 +290,6 @@
     "webpack-dev-middleware": "~1.2.0",
     "webpack-dev-server": "~1.12.1",
     "webpack-hot-middleware": "~2.4.1"
-  },
-  "disabledDependencies": {
-    "karma": "^0.13.3",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-coverage": "^0.5.0",
-    "karma-mocha": "^0.2.0",
-    "karma-notify-reporter": "^0.1.1",
-    "karma-sourcemap-loader": "^0.3.5",
-    "karma-webpack": "^1.7.0"
-  },
-  "_devDependencies": {
-    "babel-plugin-transform-function-bind": "^6.22.0"
-  },
-  "____devDependencies": {
-    "gulp-mocha": "^3.0.1",
-    "gulp-shell": "^0.5.2",
-    "run-sequence": "^1.0.2"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
